Disable scroll anchoring when in printing mode

BUG=651020
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2417683002
Cr-Commit-Position: refs/heads/master@{#425756}

Former-commit-id: 32628627dac02e25eb29924fa9b39b399d694547